--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,6 +19,6 @@
             <p class="result"></p>
         </div>
     </main>
-    <script src="../index.js"></script>
+    <script src="../../../dist/main.js"></script>
 </body>
 </html>
