Final Design and Responsivness

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
     <title>NLP Analyzer</title>
 </head>
 <body>
     <main>
-        <h1>Natural Language Processing</h1>
         <form action="">
-            <h3>The Data</h3>
-            <label for="sentence">Enter Your Sentence</label>
+            <h1>Natural Language Processing</h1>
+            <label for="sentence">Enter Your Source</label>
             <input name="sentence" id="sentence" type="text">
             <input type="submit" value="Enter">
         </form>
@@ -19,6 +19,6 @@
             <p class="result"></p>
         </div>
     </main>
-    <script src="../../../dist/main.js"></script>
+    <script type="text/javascript" src="../../../dist/main.js"></script>
 </body>
 </html>
