--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -20,5 +20,14 @@
         </div>
     </main>
     <script type="text/javascript" src="../../../dist/main.js"></script>
+    <script>
+        // Check that service workers are supported
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('sw.js');
+            });
+        }
+       </script>
 </body>
 </html>
