Finsishing the Server

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,13 +10,15 @@
     <main>
         <form action="">
             <h1>Natural Language Processing</h1>
-            <label for="sentence">Enter Your Source</label>
+            <label for="sentence">Enter Your Source(URL)</label>
             <input name="sentence" id="sentence" type="text">
-            <input type="submit" value="Enter">
+            <input type="submit" id="submit-btn" value="Enter">
         </form>
         <div class="result-container">
             <h3>The Result</h3>
-            <p class="result"></p>
+            <p class="result">
+                
+            </p>
         </div>
     </main>
     <script type="text/javascript" src="../../../dist/main.js"></script>
