--- a/src/client/assets/css/style.scss
+++ b/src/client/assets/css/style.scss
@@ -70,16 +70,19 @@ form {
 }
 
 .result-container {
-    padding-top: 50px;
+    padding-top: 10px;
     grid-area: header;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     background-image: url("../img/background.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    text-align: center;
     h3 {
+        margin-top: 10px;
+        margin-bottom: 50px;
         text-align: center;
     }
 
