--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -7,10 +7,12 @@
     <title>NLP Analyzer</title>
 </head>
 <body>
+    <header>
+        <h1>Natural Language Processing</h1>
+    </header>
     <main>
         <form action="">
-            <h1>Natural Language Processing</h1>
-            <label for="sentence">Enter Your Source(URL)</label>
+            <label for="sentence">Enter Your Sentence</label>
             <input name="sentence" id="sentence" type="text">
             <input type="submit" id="submit-btn" value="Enter">
         </form>
@@ -21,6 +23,9 @@
             </p>
         </div>
     </main>
+    <footer>
+        Done by Ahmed
+    </footer>
     <script type="text/javascript" src="../../../dist/main.js"></script>
     <script>
         // Check that service workers are supported
